# iter-rationals

./: Cargo.toml  README.md
.github/workflows/: ci.yml  main.yml  pr.yml
src/: lib.rs
