[package]
name = "iter-rationals"
description = "A fixed size, linear time, no-std iterator over the rational numbers."
version = "0.1.0"
license = "MPL-2.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
repository = "https://github.com/nathanielknight/iter-rationals"
edition = "2021"
readme = "README.md"
keywords = ["mathematics"]
categories = ["algorithms", "science", "no-std"]
exclude = [".github/"]

[dependencies]
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = "0.2.15"
