[package]
name = "iter-rationals"
description = "A fixed size, linear time, no-std iterator over the rational numbers."
version = "0.2.1"
license = "MPL-2.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
repository = "https://github.com/nathanielknight/iter-rationals"
edition = "2018"
rust_version = "1.31"
readme = "README.md"
keywords = ["mathematics"]
categories = ["algorithms", "science", "no-std"]
exclude = [".github/"]
resolver = "2"

[dependencies]
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = { version = ">=0.2.0", default-features = false }
